# docs/swagger.yaml
@@ -36,67 +36,12 @@ definitions:
 info:
   contact: {}
 paths:
-  /bird/onboard:
-    post:
-      consumes:
-      - application/json
-      description: In Dell ECS, creates a IAM user and an AccessKey. In Vault, stores
-        the secret access keys and creates a JWT auth role bound to the Brid
-      parameters:
-      - description: the user to onboard
-        in: body
-        name: brid
-        required: true
-        schema:
-          $ref: '#/definitions/model.IamUser'
-      produces:
-      - application/json
-      responses: {}
-      summary: onboard a brid to a namespace as IAM user
-      tags:
-      - Brid
-  /iamuser/{username}:
-    delete:
-      description: In Dell ECS, deletes the IAM user. In Vault, deletes the role and
-        the JWT auth role (if any)
-      parameters:
-      - description: the user to delete
-        in: path
-        name: brid
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses: {}
-      summary: delete a IAM user
-      tags:
-      - IamUser
-  /iamuser/onboard:
-    post:
-      consumes:
-      - application/json
-      description: In Dell ECS, creates a IAM user and an AccessKey. In Vault, stores
-        the secret access keys and creates a JWT auth role bound to the Brid
-      parameters:
-      - description: the user to onboard
-        in: body
-        name: brid
-        required: true
-        schema:
-          $ref: '#/definitions/model.IamUser'
-      produces:
-      - application/json
-      responses: {}
-      summary: onboard a IAM user in a namespace
-      tags:
-      - IamUser
   /namespace/migrate:
     post:
       consumes:
       - application/json
-      description: In Dell ECS, creates a IAM user (and AccessKey) for the Native
-        users, creates a second AccessKey for existing IAM users. In Vault, stores
-        the Secret Access Keys
+      description: If the safe_id is omitted in the payload, it will be derived from
+        the namespace name (first part of a split on '-')
       parameters:
       - description: the namespace to migrate
         in: body
@@ -107,15 +52,18 @@ paths:
       produces:
       - application/json
       responses: {}
-      summary: migrates a namespace
+      summary: Fetches all the users of an ECS namespace. For native users, creates
+        a IAM user, an access key, stores it in a Vault role, creates a Vault policy.
+        For IAM users, creates an access key, stores it in a Vault role, creates a
+        Vault policy.
       tags:
       - Namespace
   /namespace/onboard:
     post:
       consumes:
       - application/json
-      description: In Dell ECS, creates a namespace, a IAM user and an AccessKey.
-        In Vault, stores the Secret Access Key
+      description: If the safe_id is omitted in the payload, it will be derived from
+        the namespace (first part of a split on '-')
       parameters:
       - description: the namespace to onboard
         in: body
@@ -126,7 +74,44 @@ paths:
       produces:
       - application/json
       responses: {}
-      summary: onboards a namespace
+      summary: Creates an IAM user, an access key, stores it in a Vault role, creates
+        a Vault policy
       tags:
       - Namespace
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: If the safe_id is omitted in the payload, it will be derived from
+        the namespace name (first part of a split on '-')
+      parameters:
+      - description: the user to onboard
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.IamUser'
+      produces:
+      - application/json
+      responses: {}
+      summary: Creates a IAM user in an ECS namespace, creates an access key, stores
+        it in a Vault role, creates a Vault policy. And if the username is a BRID,
+        creates a JWT authrole.
+      tags:
+      - User
+  /user/{username}:
+    delete:
+      parameters:
+      - description: the IAM user to delete
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Deletes the IAM user, the Vault role and policy, and the JWT authrole
+        if any
+      tags:
+      - User
 swagger: "2.0"
